AP-24057: prepare for removing OffsetProvider::getDictionaryBatchOffsets